<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salmanitb.alumnisalman.activity.ConfirmActivity">

    <ImageView
        android:id="@+id/icon_confirmation"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_below="@id/icon_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/verification_title"/>

    <TextView
        android:id="@+id/txt_status_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_status"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/verification_description"/>

    <TextView
        android:id="@+id/txt_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_status_description"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:text="@string/data_anda_belum_benar_ubah_data"/>

    <TextView
        android:id="@+id/txt_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@id/txt_edit_profile"
        android:layout_marginTop="5dp"
        android:text="@string/contact_us_text"/>

</RelativeLayout>
