<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.salmanitb.alumnisalman.fragment.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/logo_salman" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_salman" />
        </LinearLayout>

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp"
            android:text="@string/alumni_masjid_salman_itb"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/lorem_ipsum"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_description"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/icon_address"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@id/icon_address"
                    android:layout_toRightOf="@id/icon_address"
                    android:text="@string/default_address"
                    android:textSize="12sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/icon_phone"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="1dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@id/icon_phone"
                    android:layout_toRightOf="@id/icon_phone"
                    android:text="@string/default_phone"
                    android:textSize="12sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/icon_email"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="1dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@id/icon_email"
                    android:layout_toRightOf="@id/icon_email"
                    android:text="@string/default_email"
                    android:textSize="12sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/separator" />

            <Button
                android:id="@+id/btn_show_popup"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:text="@string/send_email"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/app_version"
                android:textAlignment="center"
                android:textAppearance="@style/Widget.AppCompat.Button.Small" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/popupBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popupbackground"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/popupSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:gravity="top|start"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:layout_height="150dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/send"
                android:textSize="12sp"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
